--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     <div>
         <div class="uk-card uk-card-default uk-card-body"><div class="card s-a">
           <div class="card-image"><div class="card-icon icon-pencil2"> </div> </div>
-          <div class="card-body"> </div>
+
           <div class="card-title"><a class="card-link"> Web & App Design</a></div>
           <p class="card-description"> Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim.
           </p>
@@ -114,7 +114,7 @@
     <div>
         <div class="uk-card uk-card-default uk-card-body"><div class="card s-a">
           <div class="card-image"> <div class="card-icon icon-stack"> </div></div>
-          <div class="card-body"> </div>
+
           <div class="card-title"><a class="card-link"> Development </a></div>
           <p class="card-description"> Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim.
           </p>
@@ -124,7 +124,7 @@
     <div>
         <div class="uk-card uk-card-default uk-card-body"><div class="card s-a">
           <div class="card-image"> <div class="card-icon icon-cog"> </div> </div>
-          <div class="card-body"> </div>
+
           <div class="card-title"><a class="card-link"> Customization </a></div>
           <p class="card-description"> Nam liber tempor cum soluta nobis eleifend option congu
             e nihil imperdiet doming id quod mazim.</p>
@@ -134,7 +134,6 @@
     <div>
         <div class="uk-card uk-card-default uk-card-body"><div class="card s-a">
           <div class="card-image"> <div class="card-icon icon-folder-open"> </div> </div>
-          <div class="card-body"> </div>
           <div class="card-title"><a class="card-link">Marketing </a> </div>
           <p class="card-description"> Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim.
           </p>
@@ -145,33 +144,29 @@
 </div>
 </section>
 <section class="section-b">
-<div class="container">
+<div class="container asas">
   <p class="section-title"> Waxom is Realization of your Ideas </p>
   <p class="section-description"> Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius. Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium.</p>
 
-<div class="uk-child-width-1-3@m img-inline" uk-grid uk-lightbox="animation: scale">
+
+
+<div class="uk-child-width-1-3@m img-inline">
     <div>
-        <a class="uk-inline" href="images/browser-left.png" data-caption="Caption 1">
-            <img class="s-b-1" src="images/browser-left.png" alt="">
-        </a>
+        <img class="s-b-1" src="images/browser-left.png" alt="">
     </div>
     <div>
-        <a class="uk-inline" href="images/browser-center.png" data-caption="Caption 2">
-            <img class="s-b-2" src="images/browser-center.png" alt="">
-        </a>
+      <img class="s-b-2" src="images/browser-center.png" alt="">
     </div>
     <div>
-        <a class="uk-inline" href="images/browser-right.png" data-caption="Caption 3">
-            <img class="s-b-3" src="images/browser-right.png" alt="">
-        </a>
+        <img class="s-b-3" src="images/browser-right.png" alt="">
     </div>
 </div>
 </div>
 </section>
 <section class="section-c">
-  <div class="container"><p class="section-title brown-theme-title"> <span class="waxom-main-style">Waxom</span> Multipurpose WordPress Theme </p>
+  <div class="container container-brown"><div class="left-container"><p class="section-title brown-theme-title"> <span class="waxom-main-style">Waxom</span> Multipurpose WordPress Theme </p>
 <p class="section-description brown-theme-description"> Don't Forget to Rate the Template. Thanks so much!
-</p> </div></section>
+</p></div> <div class="right-container">   <button class="main-button button-sc"> Purchase Now </button></div></div></section>
 <section class="section-d">
   <div class="container">
   <p class="section-title">Our Latest Projects. </p>
@@ -193,10 +188,10 @@
       </div>
       <div class="card-body">
         <p class="card-title sd-title">
-          lol
+          Claritas Etiam Processus
         </p>
         <p class="card-description sd-description">
-          kek
+          Photography, Nature
         </p>
       </div>
       <div class="dark-cover">
@@ -217,10 +212,10 @@
       </div>
       <div class="card-body">
         <p class="card-title sd-title">
-          lol
+          Quam Nutamus Farum
         </p>
         <p class="card-description sd-description">
-          kek
+          Graphic Design, Mock-Up
         </p>
       </div>
       <div class="dark-cover">
@@ -241,10 +236,10 @@
       </div>
       <div class="card-body">
         <p class="card-title sd-title">
-          lol
+          Usus Legentis Videntur
         </p>
         <p class="card-description sd-description">
-          kek
+          Photography, Holiday
         </p>
       </div>
       <div class="dark-cover">
@@ -265,10 +260,10 @@
       </div>
       <div class="card-body">
         <p class="card-title sd-title">
-          lol
+          Claritas Etiam Processus
         </p>
         <p class="card-description sd-description">
-          kek
+          Photography, Nature
         </p>
       </div>
       <div class="dark-cover">
@@ -289,10 +284,10 @@
       </div>
       <div class="card-body">
         <p class="card-title sd-title">
-          lol
+          Quam Nutamus Farum
         </p>
         <p class="card-description sd-description">
-          kek
+          Graphic Design, Mock-Up
         </p>
       </div>
       <div class="dark-cover">
@@ -313,10 +308,10 @@
       </div>
       <div class="card-body">
         <p class="card-title sd-title">
-          lol
+          Claritas Etiam Processus
         </p>
         <p class="card-description sd-description">
-          kek
+          Photography, Nature
         </p>
       </div>
       <div class="dark-cover">
@@ -340,10 +335,10 @@
     </div>
     <div class="card-body">
       <p class="card-title sd-title">
-        lol
+        Usus Legentis Videntur
       </p>
       <p class="card-description sd-description">
-        kek
+        Photography, Nature
       </p>
     </div>
     <div class="dark-cover">
@@ -364,10 +359,10 @@
     </div>
     <div class="card-body">
       <p class="card-title sd-title">
-        lol
+        Usus Legentis Videntur
       </p>
       <p class="card-description sd-description">
-        kek
+        Photography, Nature
       </p>
     </div>
     <div class="dark-cover">
@@ -388,10 +383,10 @@
     </div>
     <div class="card-body">
       <p class="card-title sd-title">
-        lol
+        Usus Legentis Videntur
       </p>
       <p class="card-description sd-description">
-        kek
+        Photography, Nature
       </p>
     </div>
     <div class="dark-cover">
@@ -412,10 +407,10 @@
     </div>
     <div class="card-body">
       <p class="card-title sd-title">
-        lol
+        Usus Legentis Videntur
       </p>
       <p class="card-description sd-description">
-        kek
+        Photography, Nature
       </p>
     </div>
     <div class="dark-cover">
@@ -436,10 +431,10 @@
     </div>
     <div class="card-body">
       <p class="card-title sd-title">
-        lol
+        Usus Legentis Videntur
       </p>
       <p class="card-description sd-description">
-        kek
+        Photography, Nature
       </p>
     </div>
     <div class="dark-cover">
@@ -460,10 +455,10 @@
     </div>
     <div class="card-body">
       <p class="card-title sd-title">
-        lol
+        Usus Legentis Videntur
       </p>
       <p class="card-description sd-description">
-        kek
+        Photography, Nature
       </p>
     </div>
     <div class="dark-cover">
@@ -486,10 +481,10 @@
     </div>
     <div class="card-body">
       <p class="card-title sd-title">
-        lol
+        Usus Legentis Videntur
       </p>
       <p class="card-description sd-description">
-        kek
+        Photography, Nature
       </p>
     </div>
     <div class="dark-cover">
@@ -510,10 +505,10 @@
     </div>
     <div class="card-body">
       <p class="card-title sd-title">
-        lol
+        Usus Legentis Videntur
       </p>
       <p class="card-description sd-description">
-        kek
+        Photography, Nature
       </p>
     </div>
     <div class="dark-cover">
@@ -534,10 +529,10 @@
     </div>
     <div class="card-body">
       <p class="card-title sd-title">
-        lol
+        Usus Legentis Videntur
       </p>
       <p class="card-description sd-description">
-        kek
+        Photography, Nature
       </p>
     </div>
     <div class="dark-cover">
@@ -558,10 +553,10 @@
     </div>
     <div class="card-body">
       <p class="card-title sd-title">
-        lol
+        Usus Legentis Videntur
       </p>
       <p class="card-description sd-description">
-        kek
+        Photography, Nature
       </p>
     </div>
     <div class="dark-cover">
@@ -582,10 +577,10 @@
     </div>
     <div class="card-body">
       <p class="card-title sd-title">
-        lol
+        Usus Legentis Videntur
       </p>
       <p class="card-description sd-description">
-        kek
+        Photography, Nature
       </p>
     </div>
     <div class="dark-cover">
@@ -606,10 +601,10 @@
     </div>
     <div class="card-body">
       <p class="card-title sd-title">
-        lol
+        Usus Legentis Videntur
       </p>
       <p class="card-description sd-description">
-        kek
+        Photography, Nature
       </p>
     </div>
     <div class="dark-cover">
@@ -632,10 +627,10 @@
     </div>
     <div class="card-body">
       <p class="card-title sd-title">
-        lol
+        Usus Legentis Videntur
       </p>
       <p class="card-description sd-description">
-        kek
+        Photography, Nature
       </p>
     </div>
     <div class="dark-cover">
@@ -656,10 +651,10 @@
     </div>
     <div class="card-body">
       <p class="card-title sd-title">
-        lol
+        Usus Legentis Videntur
       </p>
       <p class="card-description sd-description">
-        kek
+        Photography, Nature
       </p>
     </div>
     <div class="dark-cover">
@@ -680,10 +675,10 @@
     </div>
     <div class="card-body">
       <p class="card-title sd-title">
-        lol
+        Usus Legentis Videntur
       </p>
       <p class="card-description sd-description">
-        kek
+        Photography, Nature
       </p>
     </div>
     <div class="dark-cover">
@@ -704,10 +699,10 @@
     </div>
     <div class="card-body">
       <p class="card-title sd-title">
-        lol
+        Usus Legentis Videntur
       </p>
       <p class="card-description sd-description">
-        kek
+        Photography, Nature
       </p>
     </div>
     <div class="dark-cover">
@@ -728,10 +723,10 @@
     </div>
     <div class="card-body">
       <p class="card-title sd-title">
-        lol
+        Usus Legentis Videntur
       </p>
       <p class="card-description sd-description">
-        kek
+        Photography, Nature
       </p>
     </div>
     <div class="dark-cover">
@@ -752,10 +747,10 @@
     </div>
     <div class="card-body">
       <p class="card-title sd-title">
-        lol
+        Usus Legentis Videntur
       </p>
       <p class="card-description sd-description">
-        kek
+        Photography, Nature
       </p>
     </div>
     <div class="dark-cover">
@@ -781,7 +776,7 @@
         lol
       </p>
       <p class="card-description sd-description">
-        kek
+        Photography, Nature
       </p>
     </div>
     <div class="dark-cover">
@@ -805,7 +800,7 @@
         lol
       </p>
       <p class="card-description sd-description">
-        kek
+        Photography, Nature
       </p>
     </div>
     <div class="dark-cover">
@@ -829,7 +824,7 @@
         lol
       </p>
       <p class="card-description sd-description">
-        kek
+        Photography, Nature
       </p>
     </div>
     <div class="dark-cover">
@@ -853,7 +848,7 @@
         lol
       </p>
       <p class="card-description sd-description">
-        kek
+        Photography, Nature
       </p>
     </div>
     <div class="dark-cover">
@@ -877,7 +872,7 @@
         lol
       </p>
       <p class="card-description sd-description">
-        kek
+        Photography, Nature
       </p>
     </div>
     <div class="dark-cover">
@@ -901,7 +896,7 @@
         lol
       </p>
       <p class="card-description sd-description">
-        kek
+        Photography, Nature
       </p>
     </div>
     <div class="dark-cover">
@@ -918,8 +913,38 @@
   </div></div>
 </div></li>
 </ul>
-</section>
+<button class="main-button content-button"> Load More </button>
 
+</div>
+
+</section>
+<section class="video-waxom"><iframe width="100%" height="400px" src="https://www.youtube.com/embed/4pwXhzedNCI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen loop muted playsinline uk-video="autoplay: inview"></iframe>
+<!--<div class="container">
+  <div class="cover-video">
+   <figure class="video-play"> <img class="video-icon"src="images/icon-play.png"> </figure>
+   </div>
+   <p class="video-title"> </p>
+   <p class="video-description"> </p>
+ </div>
+</div>--->
+
+<div class="container">
+<div class="row">
+<div class="col-1-4"> <figure class="aside-img"> <img src="images/iPhone_in_hand.png"></figure></div>
+<div class="col-1-2"> <p class="section-title"> Excellent for Mobile Devices. </p>
+<p class="section-description"> Qisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius claritas. Eodem modo typi, qui nunc nobis videntur parum clari, fiant sollemnes in futurum.
+</p>
+<ul class="article-list">
+<li class="right-arrow">Nam liber tempor cum soluta nobis eleifend option;</li>
+<li class="right-arrow"> Option congue nihil imperdiet doming id quod mazim placerat facer;</li>
+<li class="right-arrow">Eodem modo typi, qui nunc nobis videntur parum futurum; </li>
+<li class="right-arrow"> Investigationes demonstraverunt lectores</li>
+</ul></div>
+
+</div>
+ </section>
+ <section class="section-c"><div class="container"> <p class="section-title"> <img src="images/595bf680e03ca15d0f3ae796.png"> </p></div>  </section> 
+</div>
 
     </main>
     <footer class="footer"></footer>
@@ -927,5 +952,6 @@
   <!-- UIkit JS -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.1.6/js/uikit.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.1.6/js/uikit-icons.min.js"></script>
+  <script
 
 </html>
